pushing before making any changes to fix double scroll bar

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
 
 html {
+  scroll-behavior: smooth;
   overflow-x: hidden;
 }
 body.bg-black {
@@ -97,8 +105,10 @@ textarea.form-control {
   -webkit-box-shadow: 0 -20px 20px -5px rgba(0, 0, 0, 0.05);
   box-shadow: 0 -20px 20px -5px rgba(0, 0, 0, 0.05);
   min-height: 300px;
-  overflow: auto;
+  overflow-y: auto; /* Changed from overflow to overflow-y */
+  max-height: 100vh; /* Limit the height to viewport height */
 }
+
 
 .site-menu ul {
   position: relative;
@@ -602,8 +612,11 @@ textarea.form-control {
   padding: 0;
   margin: 0;
   list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 .nav-item {
   margin: 0;
@@ -611,6 +624,8 @@ textarea.form-control {
 .nav-link {
   padding: 10px 15px;
   border-radius: 5px;
+  -webkit-transition: background-color 0.2s;
+  -o-transition: background-color 0.2s;
   transition: background-color 0.2s;
   color: #333;
   text-decoration: none;
@@ -681,6 +696,8 @@ textarea.form-control {
   background-color: #2e2a02;  /* Existing color for better consistency */
   color: #fff;
   cursor: pointer;
+  -webkit-transition: background-color 0.3s ease;
+  -o-transition: background-color 0.3s ease;
   transition: background-color 0.3s ease;
 }
 
@@ -702,23 +719,45 @@ textarea.form-control {
 /* Existing menu-food-item style with some modifications */
 .menu-food-item {
   border-bottom: 1px dotted #ccc;  /* Retained the border style */
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;                   /* Changed from float to flex for better alignment */
-  justify-content: space-between;  /* Aligns content space-wise */
-  align-items: center;             /* Vertically aligns items in the center */
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;  /* Aligns content space-wise */
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;             /* Vertically aligns items in the center */
   width: 100%;
   padding: 20px 0;                /* Adjusted padding for top and bottom */
   margin-bottom: 30px;
-  transition: background-color 0.3s ease, transform 0.3s ease; /* Added transform to transition properties */
+  -webkit-transition: background-color 0.3s ease, -webkit-transform 0.3s ease;
+  transition: background-color 0.3s ease, -webkit-transform 0.3s ease;
+  -o-transition: background-color 0.3s ease, transform 0.3s ease;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  transition: background-color 0.3s ease, transform 0.3s ease, -webkit-transform 0.3s ease; /* Added transform to transition properties */
   background-color: #fff;         /* Added a default background color */
 }
 
 .menu-food-item:hover {
-  background-color: rgba(255, 122, 92, 0.1);  /* Consistent with existing color scheme */
+  border: 1px solid rgba(255, 215, 0, 0.5); /* Semi-transparent gold border */
+  background-color: transparent;
+  -webkit-transform: scale(1.02);
+      -ms-transform: scale(1.02);
+          transform: scale(1.02);
+  opacity: 0.9; /* Slightly less opaque */
+  transform: scale(1.02);
+  background-color: rgba(50, 50, 50, 0.2); /* Warm gray for a subtle look */
+  color: #ffd700; /* Gold text */
   transform: scale(1.02);
 }
 
+
+
 .menu-food-item h3 a {
   color: #000;
+  -webkit-transition: color 0.3s ease;
+  -o-transition: color 0.3s ease;
   transition: color 0.3s ease;
   margin: 0;                      /* Removes default margin */
   font-size: 1.4em; 
@@ -734,7 +773,9 @@ textarea.form-control {
 
 /* Style for the price and button container */
 .menu-food-item .d-flex.align-items-center {
-  align-items: baseline;         /* Adjusts alignment to look more organized */
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;         /* Adjusts alignment to look more organized */
 }
 
 .menu-food-item h3 a:hover {
@@ -1165,18 +1206,14 @@ textarea.form-control {
 .site-nav-toggle.active i:before {
   top: 0;
   -webkit-transform: rotateZ(45deg);
-  -moz-transform: rotateZ(45deg);
   -ms-transform: rotateZ(45deg);
-  -o-transform: rotateZ(45deg);
   transform: rotateZ(45deg);
 }
 
 .site-nav-toggle.active i:after {
   bottom: 0;
   -webkit-transform: rotateZ(-45deg);
-  -moz-transform: rotateZ(-45deg);
   -ms-transform: rotateZ(-45deg);
-  -o-transform: rotateZ(-45deg);
   transform: rotateZ(-45deg);
 }
 
@@ -1870,7 +1907,8 @@ textarea.form-control {
 }
 
 .navbar-light .navbar-toggler-icon {
-  filter: invert(80%) sepia(90%) saturate(1000%) hue-rotate(-10deg) brightness(100%) contrast(85%); /* adjusts for light gold */
+  -webkit-filter: invert(80%) sepia(90%) saturate(1000%) hue-rotate(-10deg) brightness(100%) contrast(85%);
+          filter: invert(80%) sepia(90%) saturate(1000%) hue-rotate(-10deg) brightness(100%) contrast(85%); /* adjusts for light gold */
 }
 
 .navbar-light .nav-link.active, 
@@ -1902,6 +1940,8 @@ div#section-menu.section.bg-lig h3 { /* Just in case there are h3 tags */
 /* If there are links within this section */
 div#section-menu.section.bg-lig a {
   color: var(--rich-gold);
+  -webkit-transition: color 0.3s ease;
+  -o-transition: color 0.3s ease;
   transition: color 0.3s ease; /* smooth transition for hover effect */
 }
 
@@ -1919,6 +1959,8 @@ p.sub-heading {
 .nav.site-tab-nav li a {
     color: var(--light-black); /* Default text color */
     border: 1px solid rgba(0, 0, 0, 0.1);
+    -webkit-transition: color 0.3s ease, background-color 0.3s ease;
+    -o-transition: color 0.3s ease, background-color 0.3s ease;
     transition: color 0.3s ease, background-color 0.3s ease; 
 }
 
@@ -1954,7 +1996,7 @@ p.sub-heading {
 }
 
 .menu-food-item .text p {
-    color: var(--light-black);
+  color: var(--light-gold);
 }
 
 .menu-food-item .d-flex.align-items-center strong {
@@ -2027,9 +2069,15 @@ p.sub-heading {
 
 /* Styling for the meal item to prevent overlapping and fix alignment */
 .meal-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center; /* Vertically center the content */
-  justify-content: space-between; /* Space out the elements horizontally */
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; /* Vertically center the content */
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; /* Space out the elements horizontally */
   padding: 15px;
   margin-bottom: 15px;
 }
@@ -2111,11 +2159,17 @@ p.sub-heading {
   
   .ftco-38-body .social-links .social-icon {
       margin: 0 10px;
+      -webkit-transition: -webkit-transform 0.3s ease;
+      transition: -webkit-transform 0.3s ease;
+      -o-transition: transform 0.3s ease;
       transition: transform 0.3s ease;
+      transition: transform 0.3s ease, -webkit-transform 0.3s ease;
   }
   
   .ftco-38-body .social-links .social-icon:hover {
-      transform: scale(1.2);
+      -webkit-transform: scale(1.2);
+          -ms-transform: scale(1.2);
+              transform: scale(1.2);
       color: #ffd700;
   }
   
